--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 					<li class='mb-2'>J. de Lucas and X. Rivas, "Contact Lie systems". <em>Preprint.</em> <a href="https://arxiv.org/abs/2207.04038" target="_blank">arXiv:2207.04038</a></li>
 
-					<li class='mb-2'>X. Rivas and D. Torres, "Lagrangian&ndash;Hamiltonian formalism for time-dependent dissipative mechanical systems". <em>J. Geom. Mech.</em> <strong>15</strong>(1):1-26, 2022. <a href="https://arxiv.org/abs/2205.14757" target="_blank">arXiv:2205.14757</a> doi: <a href="https://doi.org/10.3934/jgm.2023001" target="_blank">10.3934/jgm.2023001</a></li>
+					<li class='mb-2'>X. Rivas and D. Torres, "Lagrangian&ndash;Hamiltonian formalism for time-dependent dissipative mechanical systems". <em>J. Geom. Mech.</em> <strong>15</strong>(1):1-26, 2023. <a href="https://arxiv.org/abs/2205.14757" target="_blank">arXiv:2205.14757</a> doi: <a href="https://www.aimspress.com/article/doi/10.3934/jgm.2023001" target="_blank">10.3934/jgm.2023001</a></li>
 
 					<li class='mb-2'>M. de León, J. Gaset, X. Gràcia, M. C. Muñoz-Lecanda and X. Rivas, "Time-dependent contact mechanics". <em>Monatsh. Math.</em>, 2022. <a href="https://arxiv.org/abs/2205.09454" target="_blank">arXiv:2205.09454</a> doi: <a href="https://doi.org/10.1007/s00605-022-01767-1" target="_blank">10.1007/s00605-022-01767-1</a></li>
 
