--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 					<div class="accordion-item">
 						<h2 class="accordion-header" id="heading2">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-								<h5>Cálculo I. Grado en Matemática Computacional</h5>
+								<h5>Cálculo I</h5>
 							</button>
 						</h2>
 						<div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#accordionExample">
