--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 
 					<li class='mb-2'>M. de León, J. Gaset, M. C. Muñoz-Lecanda, X. Rivas and N. Román-Roy, "Multicontact formulation for non-conservative field theories". <em>Preprint.</em> <a href="https://arxiv.org/abs/2209.08918" target="_blank">arXiv:2209.08918</a></li>
 					
-					<li class='mb-2'>M. de León, M. Lainz, A. López-Gordón and X. Rivas, "Hamilton&ndash;Jacobi theory for contact systems: autonomous and non-autonomous". <em>Preprint.</em> <a href="https://arxiv.org/abs/2208.07436" target="_blank">arXiv:2208.07436</a></li>
+					<li class='mb-2'>M. de León, M. Lainz, A. López-Gordón and X. Rivas, "Hamilton&ndash;Jacobi theory and integrability for autonomous and non-autonomous contact systems". <em>Preprint.</em> <a href="https://arxiv.org/abs/2208.07436" target="_blank">arXiv:2208.07436</a></li>
 
-					<li class='mb-2'>J. de Lucas and X. Rivas, "Contact Lie systems". <em>Preprint.</em> <a href="https://arxiv.org/abs/2207.04038" target="_blank">arXiv:2207.04038</a></li>
+					<li class='mb-2'>J. de Lucas and X. Rivas, "Contact Lie systems: theory and applications". <em>Preprint.</em> <a href="https://arxiv.org/abs/2207.04038" target="_blank">arXiv:2207.04038</a></li>
 
 					<li class='mb-2'>X. Rivas and D. Torres, "Lagrangian&ndash;Hamiltonian formalism for cocontact systems". <em>J. Geom. Mech.</em> <strong>15</strong>(1):1-26, 2023. <a href="https://arxiv.org/abs/2205.14757" target="_blank">arXiv:2205.14757</a> doi: <a href="https://doi.org/10.3934/jgm.2023001" target="_blank">10.3934/jgm.2023001</a></li>
 
