--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
 				<h5>List of publications:</h5>
 				<ol class="ms-4">
 
+					<li class='mb-2'>J. Gaset, M. Lainz, A. Mas and X. Rivas, "The Herglotz variational principle for dissipative field theories". <em>Preprint.</em> <a href="https://arxiv.org/abs/2211.17058" target="_blank">arXiv:2211.17058</a></li>
+
 					<li class='mb-2'>X. Rivas, "Nonautonomous <em>k</em>-contact field theories". <em>Preprint.</em> <a href="https://arxiv.org/abs/2210.09166" target="_blank">arXiv:2210.09166</a></li>
 
 					<li class='mb-2'>M. de León, J. Gaset, M. C. Muñoz-Lecanda, X. Rivas and N. Román-Roy, "Multicontact formulation for non-conservative field theories". <em>Preprint.</em> <a href="https://arxiv.org/abs/2209.08918" target="_blank">arXiv:2209.08918</a></li>
