--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 					<li><a href="https://web.mat.upc.edu/xavier.gracia/" target="_blank">Xavier Gràcia</a></li>
 					<li><a href="http://mlainz.gitlab.io/" target="_blank">Manuel Lainz</a></li>
 					<li><a href="https://alopezgordon.xyz/" target="_blank">Asier López-Gordón</a></li>
+					<li>Arnau Mas</li>
 					<li>Miguel C. Muñoz-Lecanda</li>
 					<li><a href="https://web.mat.upc.edu/narciso.roman/" target="_blank">Narciso Román-Roy</a></li>
 					<li>Daniel Torres</li>
