--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
 				<h5>List of publications:</h5>
 				<ol class="ms-4">
 
+					<li class='mb-2'>J. Gaset, A. López-Gordón and X. Rivas, "Symmetries, conservation and dissipation in time-dependent contact systems". <em>Preprint.</em> <a href="https://arxiv.org/abs/2212.14848" target="_blank">arXiv:2212.14848</a></li>
+
 					<li class='mb-2'>J. Gaset, M. Lainz, A. Mas and X. Rivas, "The Herglotz variational principle for dissipative field theories". <em>Preprint.</em> <a href="https://arxiv.org/abs/2211.17058" target="_blank">arXiv:2211.17058</a></li>
 
 					<li class='mb-2'>X. Rivas, "Nonautonomous <em>k</em>-contact field theories". <em>Preprint.</em> <a href="https://arxiv.org/abs/2210.09166" target="_blank">arXiv:2210.09166</a></li>
