--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 					<li class='mb-2'>X. Rivas, "Nonautonomous <em>k</em>-contact field theories". <em>Preprint.</em> <a href="https://arxiv.org/abs/2210.09166" target="_blank">arXiv:2210.09166</a></li>
 
-					<li class='mb-2'>M. de León, J. Gaset, M. C. Muñoz-Lecanda, X. Rivas and N. Román-Roy, "Multicontact formulation for non-conservative field theories". <em>Preprint.</em> <a href="https://arxiv.org/abs/2209.08918" target="_blank">arXiv:2209.08918</a></li>
+					<li class='mb-2'>M. de León, J. Gaset, M. C. Muñoz-Lecanda, X. Rivas and N. Román-Roy, "Multicontact formulation for non-conservative field theories". <em>J. Phys. A: Math. Theor.</em> (to appear). <a href="https://arxiv.org/abs/2209.08918" target="_blank">arXiv:2209.08918</a></li>
 					
 					<li class='mb-2'>M. de León, M. Lainz, A. López-Gordón and X. Rivas, "Hamilton&ndash;Jacobi theory and integrability for autonomous and non-autonomous contact systems". <em>Preprint.</em> <a href="https://arxiv.org/abs/2208.07436" target="_blank">arXiv:2208.07436</a></li>
 
