--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 					<li class='mb-2'>M. de León, J. Gaset, M. Lainz-Valcázar, X. Rivas and N. Román-Roy, "Unified Lagrangian-Hamiltonian formalism for contact systems". <em>Fortschritte der Phys.</em> <strong>68</strong> (8):2000045, 2020. <a href="https://arxiv.org/abs/2003.13037" target="_blank">arXiv:2003.13037</a> doi: <a href="https://doi.org/10.1002/prop.202000045" target="_blank">10.1002/prop.202000045</a></li>
 
-					<li class='mb-2'>J. Gaset, X. Gràcia, M. C. Muñoz-Lecanda, X. Rivas and N. Román-Roy, "A <em>k</em>-contact Lagrangian formalism for field theories with dissipation". <em>Rep. Math. Phys.</em>, <strong>87</strong> (3):347-368, 2021. <a href="https://arxiv.org/abs/2002.10458" target="_blank">arXiv:2002.10458</a> doi: <a href="https://doi.org/10.1016/S0034-4877(21)00041-0" target="_blank">10.1016/S0034-4877(21)00041-0</a></li>
+					<li class='mb-2'>J. Gaset, X. Gràcia, M. C. Muñoz-Lecanda, X. Rivas and N. Román-Roy, "A <em>k</em>-contact Lagrangian formulation for nonconservative field theories". <em>Rep. Math. Phys.</em>, <strong>87</strong> (3):347-368, 2021. <a href="https://arxiv.org/abs/2002.10458" target="_blank">arXiv:2002.10458</a> doi: <a href="https://doi.org/10.1016/S0034-4877(21)00041-0" target="_blank">10.1016/S0034-4877(21)00041-0</a></li>
 
 					<li class='mb-2'>J. Gaset, X. Gràcia, M. C. Muñoz-Lecanda, X. Rivas and N. Román-Roy, "New contributions to the Hamiltonian and Lagrangian contact formalisms for dissipative mechanical systems and their symmetries". <em>Int. J. Geom. Methods Mod. Phys.</em>, <strong>17</strong> (6):2050090, 2020. <a href="https://arxiv.org/abs/1907.02947" target="_blank">arXiv:1907.02947</a>, doi: <a href="https://doi.org/10.1142/S0219887820500905" target="_blank">10.1142/S0219887820500905</a></li>
 
