--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 						</h2>
 						<div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
-								<strong>Grado en Matemática Computacional</strong>
+								<h6>Grado en Matemática Computacional</h6>
 								<p>Universidad Internacional de La Rioja. <a href="https://www.unir.net/" target="_blank">UNIR</a>.</p>
 								<p><a href="docs/AC/presentacion.pdf" target="_blank">Basic information</a>. <a href="docs/AC/analisis-complejo.pdf" target="_blank">Lecture notes</a></p>
 							</div>
