--- a/gamma-seminar/index.html
+++ b/gamma-seminar/index.html
@@ -27,9 +27,25 @@
 		<div class="container mt-4">
 
 			<div class="row">
-				<h1 class="h1 blue name">Seminar GAMMA:<br>Geometry and Applications. Modern Mathematical Approaches</h1>
+				<div class="col-2">
+					
+					<img src="./../img/Gamma.png" class="img-thumbnail rounded" alt="xavi">
 
-				<p>This is a new seminar and bla bla bla...</p>
+				</div>
+
+				<div class="col-10">
+					
+					<h1 class="h1 blue name">Seminar GAMMA:<br>Geometry and Applications. Modern Mathematical Approaches</h1>
+
+					<p>This is a new seminar and bla bla bla...</p>
+
+				</div>
+			</div>
+
+			<hr class="hr-blue my-4">
+
+
+			<div class="row">				
 
 				<h3 class="blue">&#9632; Talks</h3>
 
