--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
 				<h5>List of publications:</h5>
 				<ol class="ms-4">
 
+					<li class='mb-2'>J. de Lucas, X. Rivas, S. Vilariño and B. M. Zawora, "A <em>k</em>-polycosymplectic Marsden&ndash;Weinstein reduction". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2302.09037" target="_blank">2302.09037</a></li>
+
 					<li class='mb-2'>J. Gaset, A. López-Gordón and X. Rivas, "Symmetries, conservation and dissipation in time-dependent contact systems". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2212.14848" target="_blank">2212.14848</a></li>
 
 					<li class='mb-2'>J. Gaset, M. Lainz, A. Mas and X. Rivas, "The Herglotz variational principle for dissipative field theories". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2211.17058" target="_blank">2211.17058</a></li>
@@ -113,6 +115,7 @@
 					<li><a href="https://web.mat.upc.edu/narciso.roman/" target="_blank">Narciso Román-Roy</a></li>
 					<li>Daniel Torres</li>
 					<li><a href="http://cud.unizar.es/svilariño" target="_blank">Silvia Vilariño</a></li>
+					<li>Bartosz M. Zawora</li>
 				</ul>
 			</div>
 
