--- a/gamma-seminar/index.html
+++ b/gamma-seminar/index.html
@@ -37,7 +37,7 @@
 					
 					<h1 class="h1 blue name">Seminar GAMMA:<br>Geometry and Applications. Modern Mathematical Approaches</h1>
 
-					<p>This is a new seminar and bla bla bla...</p>
+					<p>The Geometry, Applications, an Modern Mathematical Approaches (Gamma) Seminar  is an online seminar aimed at discussing basic and advanced research topics conducted by the common Gamma Polish-Spanish geometric group gathering people from the University of Warsaw, the International University of La Rioja, the Polytechnic University of Madrid, ICMAT, and the Polytechnic University of Barcelona.</p>
 
 				</div>
 			</div>
@@ -53,30 +53,30 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading1">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse2">
-								<h5>Energy-momentum method for time-dependent mechanical systems
+								<h5>A brief introduction to symplectic geometry and Marsden—Weinstein reduction I
 								<br>
-								Bartosz M. Zawora &#8213; 01/03/2023</h5>
+								Javier de Lucas &#8213; 01/03/2023</h5>
 							</button>
 						</h3>
 						<div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis semper diam, sit amet iaculis justo cursus nec. Sed eu mi facilisis, malesuada diam eu, rutrum libero. Morbi elementum, ligula eget placerat iaculis, erat turpis rutrum est, ornare ornare augue neque non velit. Morbi mattis quam nec mi luctus, a porttitor massa tincidunt. Sed rhoncus ornare lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec et condimentum purus. Proin nisi arcu, rutrum ac ultrices vitae, tempor ut arcu. Suspendisse at viverra nisl, vel venenatis velit. Ut vel elit dui. Suspendisse sed bibendum nunc, eget porta purus.</p>
+								<p>This talk is aimed at reviewing the basic notions on symplectic geometry, momentum maps, and the Marsden-Weinstein reduction theory.</p>
 							</div>
 						</div>
 					</div>
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading2">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-								<h5>Energy-momentum method for time-dependent mechanical systems
+								<h5>A brief introduction to symplectic geometry and Marsden—Weinstein reduction II
 								<br>
-								Bartosz M. Zawora &#8213; 01/03/2023</h5>
+								Javier de Lucas &#8213; 01/03/2023</h5>
 							</button>
 						</h3>
 						<div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis semper diam, sit amet iaculis justo cursus nec. Sed eu mi facilisis, malesuada diam eu, rutrum libero. Morbi elementum, ligula eget placerat iaculis, erat turpis rutrum est, ornare ornare augue neque non velit. Morbi mattis quam nec mi luctus, a porttitor massa tincidunt. Sed rhoncus ornare lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec et condimentum purus. Proin nisi arcu, rutrum ac ultrices vitae, tempor ut arcu. Suspendisse at viverra nisl, vel venenatis velit. Ut vel elit dui. Suspendisse sed bibendum nunc, eget porta purus.</p>
+								<p>This talk is aimed at reviewing the basic notions on symplectic geometry, momentum maps, and the Marsden-Weinstein reduction theory.</p>
 							</div>
 						</div>
 					</div>
