--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 					<li class='mb-2'>M. de León, J. Gaset, M. C. Muñoz-Lecanda, X. Rivas and N. Román-Roy, "Multicontact formulation for non-conservative field theories". <em>J. Phys. A: Math. Theor.</em> <strong>56</strong>(2):025201, 2023. arxiv: <a href="https://arxiv.org/abs/2209.08918" target="_blank">2209.08918</a> doi: <a href="https://doi.org/10.1088/1751-8121/acb575" target="_blank">10.1088/1751-8121/acb575</a></li>
 					
-					<li class='mb-2'>M. de León, M. Lainz, A. López-Gordón and X. Rivas, "Hamilton&ndash;Jacobi theory and integrability for autonomous and non-autonomous contact systems". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2208.07436" target="_blank">2208.07436</a></li>
+					<li class='mb-2'>M. de León, M. Lainz, A. López-Gordón and X. Rivas, "Hamilton&ndash;Jacobi theory and integrability for autonomous and non-autonomous contact systems". <em>J. Geom. Phys.</em> <strong>187</strong>:104787, 2023. arxiv: <a href="https://arxiv.org/abs/2208.07436" target="_blank">2208.07436</a> doi: <a href="https://doi.org/10.1016/j.geomphys.2023.104787" target="_blank">10.1016/j.geomphys.2023.104787</a></li>
 
 					<li class='mb-2'>J. de Lucas and X. Rivas, "Contact Lie systems: theory and applications". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2207.04038" target="_blank">2207.04038</a></li>
 
