--- a/gamma/index.html
+++ b/gamma/index.html
@@ -37,7 +37,7 @@
 					
 					<h1 class="h1 blue name">Seminar GAMMA:<br>Geometry and Applications. Modern Mathematical Approaches</h1>
 
-					<p>The Geometry, Applications, an Modern Mathematical Approaches (Gamma) Seminar  is an online seminar aimed at discussing basic and advanced research topics conducted by the common Gamma Polish-Spanish geometric group gathering people from the University of Warsaw, the International University of La Rioja, the Polytechnic University of Madrid, ICMAT, and the Polytechnic University of Barcelona.</p>
+					<p>The Geometry, Applications, an Modern Mathematical Approaches (Gamma) Seminar  is an online seminar aimed at discussing basic and advanced research topics conducted by the common Gamma Polish-Spanish geometric group gathering people from the University of Warsaw, the International University of La Rioja, the Polytechnic University of Madrid, ICMAT, and the Polytechnic University of Catalonia.</p>
 
 				</div>
 			</div>
