--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
 						<dt class="col-sm-2">e-mail</dt>
 						<dd class="col-sm-10">xavier.rivas(at)upc.edu<br>xavier.rivas(at)unir.net</dd>
 						<dt class="col-sm-2">web page</dt>
-						<dd class="col-sm-10"><a href="https://web.mat.upc.edu/xavier.rivas/">web.mat.upc.edu/xavier.rivas</a><br>
-						<a href="http://xavirivas.com">xavirivas.com</a></dd>
+						<dd class="col-sm-10">
+							<a href="http://xavirivas.com">xavirivas.com</a>
+							<br>
+							<a href="https://web.mat.upc.edu/xavier.rivas/">web.mat.upc.edu/xavier.rivas</a>
+						</dd>
 						<dt class="col-sm-2">ORCID code</dt>
 						<dd class="col-sm-10"><div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0002-4175-5157" href="https://orcid.org/0000-0002-4175-5157" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">0000-0002-4175-5157</a></div></dd>
 						<dt class="col-sm-2">Other links</dt>
@@ -141,7 +144,7 @@
 					<div class="accordion-item">
 						<h2 class="accordion-header" id="heading2">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-								<h5>Lógica computacional</h5>
+								<h5>Lógica matemática</h5>
 							</button>
 						</h2>
 						<div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#accordionExample">
