--- a/gamma/index.html
+++ b/gamma/index.html
@@ -53,105 +53,30 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading1">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse2">
-								<h5>A brief introduction to symplectic geometry and Marsden—Weinstein reduction I
+								<h5>Basics on symplectic geometry and Marsden-Weinstein reduction II
 								<br>
-								Javier de Lucas &#8213; 01/03/2023</h5>
+								Javier de Lucas &#8213; 30/03/2023, 21:00</h5>
 							</button>
 						</h3>
 						<div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>This talk is aimed at reviewing the basic notions on symplectic geometry, momentum maps, and the Marsden-Weinstein reduction theory.</p>
+								<p>This talk, divided into two parts, is mostly aimed at explaining fundamental facts on symplectic geometry, the Marsden-Weinstein-Meyer reduction theorem, and their applications in Physics. I will try to provide some not very well-known facts to make to talk more interesting to those knowing the theory, while keeping it simple for beginners. Facts about modern research problems concerning the Marsden-Weinstein Meyer theorem will be detailed.</p>
 							</div>
 						</div>
 					</div>
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading2">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-								<h5>A brief introduction to symplectic geometry and Marsden—Weinstein reduction II
+								<h5>Basics on symplectic geometry and Marsden-Weinstein reduction I
 								<br>
-								Javier de Lucas &#8213; 01/03/2023</h5>
+								Javier de Lucas &#8213; 23/03/2023, 21:00</h5>
 							</button>
 						</h3>
 						<div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>This talk is aimed at reviewing the basic notions on symplectic geometry, momentum maps, and the Marsden-Weinstein reduction theory.</p>
-							</div>
-						</div>
-					</div>
-					<div class="accordion-item">
-						<h3 class="accordion-header" id="heading3">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
-								<h5>Energy-momentum method for time-dependent mechanical systems
-								<br>
-								Bartosz M. Zawora &#8213; 01/03/2023</h5>
-							</button>
-						</h3>
-						<div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3" data-bs-parent="#accordionExample">
-							<div class="accordion-body">
-								<h6>Abstract</h6>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis semper diam, sit amet iaculis justo cursus nec. Sed eu mi facilisis, malesuada diam eu, rutrum libero. Morbi elementum, ligula eget placerat iaculis, erat turpis rutrum est, ornare ornare augue neque non velit. Morbi mattis quam nec mi luctus, a porttitor massa tincidunt. Sed rhoncus ornare lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec et condimentum purus. Proin nisi arcu, rutrum ac ultrices vitae, tempor ut arcu. Suspendisse at viverra nisl, vel venenatis velit. Ut vel elit dui. Suspendisse sed bibendum nunc, eget porta purus.</p>
-							</div>
-						</div>
-					</div>
-					<div class="accordion-item">
-						<h3 class="accordion-header" id="heading4">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
-								<h5>Energy-momentum method for time-dependent mechanical systems
-								<br>
-								Bartosz M. Zawora &#8213; 01/03/2023</h5>
-							</button>
-						</h3>
-						<div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4" data-bs-parent="#accordionExample">
-							<div class="accordion-body">
-								<h6>Abstract</h6>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis semper diam, sit amet iaculis justo cursus nec. Sed eu mi facilisis, malesuada diam eu, rutrum libero. Morbi elementum, ligula eget placerat iaculis, erat turpis rutrum est, ornare ornare augue neque non velit. Morbi mattis quam nec mi luctus, a porttitor massa tincidunt. Sed rhoncus ornare lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec et condimentum purus. Proin nisi arcu, rutrum ac ultrices vitae, tempor ut arcu. Suspendisse at viverra nisl, vel venenatis velit. Ut vel elit dui. Suspendisse sed bibendum nunc, eget porta purus.</p>
-							</div>
-						</div>
-					</div>
-					<div class="accordion-item">
-						<h3 class="accordion-header" id="heading5">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapse5">
-								<h5>Energy-momentum method for time-dependent mechanical systems
-								<br>
-								Bartosz M. Zawora &#8213; 01/03/2023</h5>
-							</button>
-						</h3>
-						<div id="collapse5" class="accordion-collapse collapse" aria-labelledby="heading5" data-bs-parent="#accordionExample">
-							<div class="accordion-body">
-								<h6>Abstract</h6>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis semper diam, sit amet iaculis justo cursus nec. Sed eu mi facilisis, malesuada diam eu, rutrum libero. Morbi elementum, ligula eget placerat iaculis, erat turpis rutrum est, ornare ornare augue neque non velit. Morbi mattis quam nec mi luctus, a porttitor massa tincidunt. Sed rhoncus ornare lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec et condimentum purus. Proin nisi arcu, rutrum ac ultrices vitae, tempor ut arcu. Suspendisse at viverra nisl, vel venenatis velit. Ut vel elit dui. Suspendisse sed bibendum nunc, eget porta purus.</p>
-							</div>
-						</div>
-					</div>
-					<div class="accordion-item">
-						<h3 class="accordion-header" id="heading6">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapse6">
-								<h5>Energy-momentum method for time-dependent mechanical systems
-								<br>
-								Bartosz M. Zawora &#8213; 01/03/2023</h5>
-							</button>
-						</h3>
-						<div id="collapse6" class="accordion-collapse collapse" aria-labelledby="heading6" data-bs-parent="#accordionExample">
-							<div class="accordion-body">
-								<h6>Abstract</h6>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis semper diam, sit amet iaculis justo cursus nec. Sed eu mi facilisis, malesuada diam eu, rutrum libero. Morbi elementum, ligula eget placerat iaculis, erat turpis rutrum est, ornare ornare augue neque non velit. Morbi mattis quam nec mi luctus, a porttitor massa tincidunt. Sed rhoncus ornare lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec et condimentum purus. Proin nisi arcu, rutrum ac ultrices vitae, tempor ut arcu. Suspendisse at viverra nisl, vel venenatis velit. Ut vel elit dui. Suspendisse sed bibendum nunc, eget porta purus.</p>
-							</div>
-						</div>
-					</div>
-					<div class="accordion-item">
-						<h3 class="accordion-header" id="heading7">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7" aria-expanded="false" aria-controls="collapse7">
-								<h5>Energy-momentum method for time-dependent mechanical systems
-								<br>
-								Bartosz M. Zawora &#8213; 01/03/2023</h5>
-							</button>
-						</h3>
-						<div id="collapse7" class="accordion-collapse collapse" aria-labelledby="heading7" data-bs-parent="#accordionExample">
-							<div class="accordion-body">
-								<h6>Abstract</h6>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis semper diam, sit amet iaculis justo cursus nec. Sed eu mi facilisis, malesuada diam eu, rutrum libero. Morbi elementum, ligula eget placerat iaculis, erat turpis rutrum est, ornare ornare augue neque non velit. Morbi mattis quam nec mi luctus, a porttitor massa tincidunt. Sed rhoncus ornare lobortis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec et condimentum purus. Proin nisi arcu, rutrum ac ultrices vitae, tempor ut arcu. Suspendisse at viverra nisl, vel venenatis velit. Ut vel elit dui. Suspendisse sed bibendum nunc, eget porta purus.</p>
+								<p>This talk, divided into two parts, is mostly aimed at explaining fundamental facts on symplectic geometry, the Marsden-Weinstein-Meyer reduction theorem, and their applications in Physics. I will try to provide some not very well-known facts to make to talk more interesting to those knowing the theory, while keeping it simple for beginners. Facts about modern research problems concerning the Marsden-Weinstein Meyer theorem will be detailed.</p>
 							</div>
 						</div>
 					</div>
@@ -161,7 +86,7 @@
 
 		</div>
 
-		<footer class="container-fluid footer mt-5"></footer>
+		<!-- <footer class="container-fluid footer mt-5"></footer> -->
 
 		<!-- Option 1: Bootstrap Bundle with Popper -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
