--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 					<li class='mb-2'>J. Gaset, M. Lainz, A. Mas and X. Rivas, "The Herglotz variational principle for dissipative field theories". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2211.17058" target="_blank">2211.17058</a></li>
 
-					<li class='mb-2'>X. Rivas, "Nonautonomous <em>k</em>-contact field theories". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2210.09166" target="_blank">2210.09166</a></li>
+					<li class='mb-2'>X. Rivas, "Nonautonomous <em>k</em>-contact field theories". <em>J. Math. Phys.</em> <strong>64</strong>(3):033507, 2023. arxiv: <a href="https://arxiv.org/abs/2210.09166" target="_blank">2210.09166</a> doi: <a href="https://doi.org/10.1063/5.0131110" target="_blank">10.1063/5.0131110</a></li>
 
 					<li class='mb-2'>M. de León, J. Gaset, M. C. Muñoz-Lecanda, X. Rivas and N. Román-Roy, "Multicontact formulation for non-conservative field theories". <em>J. Phys. A: Math. Theor.</em> <strong>56</strong>(2):025201, 2023. arxiv: <a href="https://arxiv.org/abs/2209.08918" target="_blank">2209.08918</a> doi: <a href="https://doi.org/10.1088/1751-8121/acb575" target="_blank">10.1088/1751-8121/acb575</a></li>
 					
