--- a/gamma/index.html
+++ b/gamma/index.html
@@ -10,7 +10,7 @@
 
 		<link rel="stylesheet" type="text/css" href="./../css/style.css">
 
-		<title>Xavier Rivas</title>
+		<title>Gamma Seminar</title>
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-RG1PTVSHCG"></script>
