--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- Bootstrap CSS -->
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 
 		<link rel="stylesheet" type="text/css" href="./css/style.css">
 
@@ -38,7 +38,7 @@
 						<!-- <dt class="col-sm-2">Postal adress</dt>
 						<dd class="col-sm-10">Campus Nord, edifici C3, despatx 102.<br> C. Jordi Girona, 1. 08034 Barcelona, Catalunya.</dd> -->
 						<dt class="col-sm-2">e-mail</dt>
-						<dd class="col-sm-10">xavier.rivas(at)upc.edu<br>xavier.rivas(at)unir.net</dd>
+						<dd class="col-sm-10">xavier.rivas(at)unir.net<br>xavier.rivas(at)upc.edu</dd>
 						<dt class="col-sm-2">web page</dt>
 						<dd class="col-sm-10">
 							<a href="http://xavirivas.com">xavirivas.com</a>
@@ -219,7 +219,7 @@
 		<footer class="container-fluid footer mt-5"></footer>
 
 		<!-- Option 1: Bootstrap Bundle with Popper -->
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 
 	</body>
 </html>
