--- a/gamma/index.html
+++ b/gamma/index.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- Bootstrap CSS -->
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+  
 		<link rel="stylesheet" type="text/css" href="./../css/style.css">
 
 		<title>Gamma Seminar</title>
@@ -37,8 +37,8 @@
 					
 					<h1 class="h1 blue name">Seminar GAMMA:<br>Geometry and Applications. Modern Mathematical Approaches</h1>
 
-					<p>The Geometry, Applications, an Modern Mathematical Approaches (Gamma) Seminar  is an online seminar aimed at discussing basic and advanced research topics conducted by the common Gamma Polish-Spanish geometric group gathering people from the University of Warsaw, the International University of La Rioja, the Polytechnic University of Madrid, ICMAT, and the Polytechnic University of Catalonia.</p>
-
+					<p>The <strong>Geometry and Applications: Modern Mathematical Approaches (Gamma) Seminar</strong> is a weekly online seminar aimed at discussing basic and advanced research topics conducted by the Polish-Spanish geometric group gathering people from the University of Warsaw, the International University of La Rioja, the Polytechnic University of Madrid, ICMAT, and the Polytechnic University of Catalonia.</p>
+					<p><strong>e-mail:</strong> gamma.seminar(at)gmail.com</p>
 				</div>
 			</div>
 
@@ -47,36 +47,53 @@
 
 			<div class="row">				
 
-				<h3 class="blue">&#9632; Talks</h3>
+				<h3 class="blue">&#9632; Conferences</h3>
 
 				<div class="accordion" id="accordionExample">
 					<div class="accordion-item">
-						<h3 class="accordion-header" id="heading1">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse2">
-								<h5>Basics on symplectic geometry and Marsden-Weinstein reduction II
+						<h3 class="accordion-header" id="heading3">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
+								<h5>Basics on symplectic geometry and Marsden-Weinstein reduction III
 								<br>
-								Javier de Lucas &#8213; 30/03/2023, 21:00</h5>
+								Javier de Lucas &#8213; 13/04/2023, 21:00</h5>
 							</button>
 						</h3>
-						<div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1" data-bs-parent="#accordionExample">
+						<div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>This talk, divided into two parts, is mostly aimed at explaining fundamental facts on symplectic geometry, the Marsden-Weinstein-Meyer reduction theorem, and their applications in Physics. I will try to provide some not very well-known facts to make to talk more interesting to those knowing the theory, while keeping it simple for beginners. Facts about modern research problems concerning the Marsden-Weinstein Meyer theorem will be detailed.</p>
+								<p>This talk, divided into three parts, is mostly aimed at explaining fundamental facts on symplectic geometry, the Marsden-Weinstein-Meyer reduction theorem, and their applications in Physics. I will try to provide some not very well-known facts to make to talk more interesting to those knowing the theory, while keeping it simple for beginners. Facts about modern research problems concerning the Marsden-Weinstein-Meyer theorem will be detailed.</p>
 							</div>
 						</div>
 					</div>
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading2">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-								<h5>Basics on symplectic geometry and Marsden-Weinstein reduction I
+								<h5>Basics on symplectic geometry and Marsden-Weinstein reduction II
 								<br>
-								Javier de Lucas &#8213; 23/03/2023, 21:00</h5>
+								Javier de Lucas &#8213; 30/03/2023, 21:00</h5>
 							</button>
 						</h3>
 						<div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>This talk, divided into two parts, is mostly aimed at explaining fundamental facts on symplectic geometry, the Marsden-Weinstein-Meyer reduction theorem, and their applications in Physics. I will try to provide some not very well-known facts to make to talk more interesting to those knowing the theory, while keeping it simple for beginners. Facts about modern research problems concerning the Marsden-Weinstein Meyer theorem will be detailed.</p>
+								<p>This talk, divided into three parts, is mostly aimed at explaining fundamental facts on symplectic geometry, the Marsden-Weinstein-Meyer reduction theorem, and their applications in Physics. I will try to provide some not very well-known facts to make to talk more interesting to those knowing the theory, while keeping it simple for beginners. Facts about modern research problems concerning the Marsden-Weinstein-Meyer theorem will be detailed.</p>
+								<strong>Link to the video: </strong><a href='https://youtu.be/963H8MsFROM' target="_blank">Javier de Lucas --- Basics on symplectic geometry and Marsden-Weinstein reduction (part 2)</a>
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading1">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
+								<h5>Basics on symplectic geometry and Marsden-Weinstein reduction I
+								<br>
+								Javier de Lucas &#8213; 23/03/2023, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p>This talk, divided into three parts, is mostly aimed at explaining fundamental facts on symplectic geometry, the Marsden-Weinstein-Meyer reduction theorem, and their applications in Physics. I will try to provide some not very well-known facts to make to talk more interesting to those knowing the theory, while keeping it simple for beginners. Facts about modern research problems concerning the Marsden-Weinstein-Meyer theorem will be detailed.</p>
+								<strong>Link to the video: </strong><a href='https://youtu.be/cDzFSQAYMZ4' target="_blank">Javier de Lucas --- Basics on symplectic geometry and Marsden-Weinstein reduction (part 1)</a>
 							</div>
 						</div>
 					</div>
@@ -86,10 +103,12 @@
 
 		</div>
 
-		<!-- <footer class="container-fluid footer mt-5"></footer> -->
+		<!-- <footer class="container-fluid footer mt-5">
+			<p class="pt-3 text-center text-white">gamma.seminar(at)gmail.com</p>
+		</footer> -->
 
 		<!-- Option 1: Bootstrap Bundle with Popper -->
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 
 	</body>
 </html>
