--- a/gamma/index.html
+++ b/gamma/index.html
@@ -12,6 +12,8 @@
 
 		<title>Gamma Seminar</title>
 
+		<link rel="icon" type="image/x-icon" href="../img/Gamma.png">
+
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-RG1PTVSHCG"></script>
 		<script>
@@ -29,7 +31,7 @@
 			<div class="row">
 				<div class="col-2">
 					
-					<img src="./../img/Gamma.png" class="img-thumbnail rounded" alt="xavi">
+					<img src="./../img/Gamma.png" class="img-thumbnail border-0 mt-2" alt="xavi">
 
 				</div>
 
