--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
 				<h5>List of publications:</h5>
 				<ol class="ms-4">
 
+					<li class='mb-2'>X. Rivas, M. Salgado and S. Souto, "Some contributions to <em>k</em>-contact Lagrangian field equations, symmetries and dissipation laws". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2304.00833" target="_blank">2304.00833</a></li>
+
 					<li class='mb-2'>J. de Lucas, X. Rivas, S. Vilariño and B. M. Zawora, "A <em>k</em>-polycosymplectic Marsden&ndash;Weinstein reduction". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2302.09037" target="_blank">2302.09037</a></li>
 
 					<li class='mb-2'>J. Gaset, A. López-Gordón and X. Rivas, "Symmetries, conservation and dissipation in time-dependent contact systems". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2212.14848" target="_blank">2212.14848</a></li>
@@ -116,6 +118,8 @@
 					<li>Arnau Mas</li>
 					<li>Miguel C. Muñoz-Lecanda</li>
 					<li><a href="https://web.mat.upc.edu/narciso.roman/" target="_blank">Narciso Román-Roy</a></li>
+					<li><a href="http://xtsunxet.usc.es/modesto/" target="_blank">Modesto Salgado</a></li>
+					<li>Silvia Souto</li>
 					<li>Daniel Torres</li>
 					<li><a href="http://cud.unizar.es/svilariño" target="_blank">Silvia Vilariño</a></li>
 					<li>Bartosz M. Zawora</li>
