--- a/gamma/index.html
+++ b/gamma/index.html
@@ -53,6 +53,36 @@
 
 				<div class="accordion" id="accordionExample">
 					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading5">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapse5">
+								<h5>Symplectic mechanics II
+								<br>
+								Xavier Rivas &#8213; 27/04/2023, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse5" class="accordion-collapse collapse" aria-labelledby="heading5" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p>Coming soon</p>
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading4">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
+								<h5>Symplectic mechanics I
+								<br>
+								Xavier Rivas &#8213; 20/04/2023, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p>Coming soon</p>
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading3">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
 								<h5>Basics on symplectic geometry and Marsden-Weinstein reduction III
@@ -64,6 +94,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p>This talk, divided into three parts, is mostly aimed at explaining fundamental facts on symplectic geometry, the Marsden-Weinstein-Meyer reduction theorem, and their applications in Physics. I will try to provide some not very well-known facts to make to talk more interesting to those knowing the theory, while keeping it simple for beginners. Facts about modern research problems concerning the Marsden-Weinstein-Meyer theorem will be detailed.</p>
+								<strong>Link to the video: </strong><a href='https://youtu.be/WmHWireq0GQ' target="_blank">Javier de Lucas --- Basics on symplectic geometry and Marsden-Weinstein reduction (part 3)</a>
 							</div>
 						</div>
 					</div>
