--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<p>My PhD advisors were <a href="https://web.mat.upc.edu/narciso.roman/" target="_blank">Narciso Román-Roy</a> and <a href="https://web.mat.upc.edu/xavier.gracia/" target="_blank">Xavier Gràcia Sabaté</a>. You can find my thesis <a href = "docs/PhD.pdf">here</a>.</p>
 
 				<h5>List of publications:</h5>
-				<ol class="ms-4">
+				<ol reversed class="ms-4">
 
 					<li class='mb-2'>X. Rivas, M. Salgado and S. Souto, "Some contributions to <em>k</em>-contact Lagrangian field equations, symmetries and dissipation laws". <em>Preprint.</em> arxiv: <a href="https://arxiv.org/abs/2304.00833" target="_blank">2304.00833</a></li>
 
