--- a/gamma/index.html
+++ b/gamma/index.html
@@ -53,6 +53,51 @@
 
 				<div class="accordion" id="accordionExample">
 					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading8">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse8" aria-expanded="false" aria-controls="collapse8">
+								<h5>Daniel Pérez Palau
+								<br>
+								TBA &#8213; 18/05/2023, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse8" class="accordion-collapse collapse" aria-labelledby="heading8" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p>Coming soon</p>
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading7">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7" aria-expanded="false" aria-controls="collapse7">
+								<h5>Asier López-Gordón
+								<br>
+								TBA &#8213; 11/05/2023, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse7" class="accordion-collapse collapse" aria-labelledby="heading7" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p>Coming soon</p>
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading6">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapse6">
+								<h5>Jordi Gaset
+								<br>
+								TBA &#8213; 04/05/2023, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse6" class="accordion-collapse collapse" aria-labelledby="heading6" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p>Coming soon</p>
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading5">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapse5">
 								<h5>Symplectic mechanics II
