--- a/gamma/index.html
+++ b/gamma/index.html
@@ -181,9 +181,9 @@
 
 		</div>
 
-		<!-- <footer class="container-fluid footer mt-5">
-			<p class="pt-3 text-center text-white">gamma.seminar(at)gmail.com</p>
-		</footer> -->
+		<footer class="container-fluid footer mt-5 pb-1">
+			<p class="pt-3 text-center text-white"><small>Geometry and Applications. Modern Mathematical Approaches<br>gamma.seminar(at)gmail.com</small></p>
+		</footer>
 
 		<!-- Option 1: Bootstrap Bundle with Popper -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
