--- a/gamma/index.html
+++ b/gamma/index.html
@@ -108,7 +108,7 @@
 						<div id="collapse5" class="accordion-collapse collapse" aria-labelledby="heading5" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>Coming soon</p>
+								<p>This talk, divided into two parts, is intended to be an introduction to mechanics on symplectic manifolds, both in the Hamiltonian and Lagrangian formalisms. We will start by reviewing some basic results on symplectic geometry and Hamiltonian systems, and introducing some concepts about symmetries of Hamiltonian systems and Noether's theorem. Then, we will see how to obtain a symplectic structure on the tangent bundle of the configuration space of a mechanical system from a Lagrangian function. In the second part of the talk we will cover two geometric formulations for time-dependent systems using cosymplectic and contact geometry. Throughout the talk, some examples will be used to illustrate the theory.</p>
 							</div>
 						</div>
 					</div>
@@ -123,7 +123,7 @@
 						<div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>Coming soon</p>
+								<p>This talk, divided into two parts, is intended to be an introduction to mechanics on symplectic manifolds, both in the Hamiltonian and Lagrangian formalisms. We will start by reviewing some basic results on symplectic geometry and Hamiltonian systems, and introducing some concepts about symmetries of Hamiltonian systems and Noether's theorem. Then, we will see how to obtain a symplectic structure on the tangent bundle of the configuration space of a mechanical system from a Lagrangian function. In the second part of the talk we will cover two geometric formulations for time-dependent systems using cosymplectic and contact geometry. Throughout the talk, some examples will be used to illustrate the theory.</p>
 							</div>
 						</div>
 					</div>
