--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 						<a href="https://scholar.google.es/citations?user=MyVZoPMAAAAJ" target="_blank">Google Scholar</a><br>
 						<a href="https://publons.com/researcher/4705307/xavier-rivas/" target="_blank">ResearcherID</a><br>
 						<a href="https://mathscinet.ams.org/mathscinet/MRAuthorID/1375865" target="_blank">MathSciNet</a><br>
+						<a href="https://www.scopus.com/authid/detail.uri?authorId=57215094927" target="_blank">Scopus</a><br>
 						<a href="https://www.zotero.org/xrivas" target="_blank">Zotero</a></dd>
 					</dl>
 					
