--- a/gamma/index.html
+++ b/gamma/index.html
@@ -52,6 +52,21 @@
 				<h3 class="blue">&#9632; Conferences</h3>
 
 				<div class="accordion" id="accordionExample">
+					<!-- <div class="accordion-item">
+						<h3 class="accordion-header" id="heading10">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse10" aria-expanded="false" aria-controls="collapse10">
+								<h5>Tymon Frelik
+								<br>
+								TBA &#8213; 01/06/2023, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse10" class="accordion-collapse collapse" aria-labelledby="heading10" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p>Coming soon</p>
+							</div>
+						</div>
+					</div> -->
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading9">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse9" aria-expanded="false" aria-controls="collapse9">
@@ -139,6 +154,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p>This talk, divided into two parts, is intended to be an introduction to mechanics on symplectic manifolds, both in the Hamiltonian and Lagrangian formalisms. We will start by reviewing some basic results on symplectic geometry and Hamiltonian systems, and introducing some concepts about symmetries of Hamiltonian systems and Noether's theorem. Then, we will see how to obtain a symplectic structure on the tangent bundle of the configuration space of a mechanical system from a Lagrangian function. In the second part of the talk we will cover two geometric formulations for time-dependent systems using cosymplectic and contact geometry. Throughout the talk, some examples will be used to illustrate the theory.</p>
+								<strong>Link to the video: </strong><a href='https://youtu.be/rFEslNLQfv4' target="_blank">Xavier Rivas --- Symplectic mechanics (part 1)</a>
 							</div>
 						</div>
 					</div>
