--- a/gamma/index.html
+++ b/gamma/index.html
@@ -52,7 +52,7 @@
 				<h3 class="blue">&#9632; Conferences</h3>
 
 				<div class="accordion" id="accordionExample">
-					<!-- <div class="accordion-item">
+					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading10">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse10" aria-expanded="false" aria-controls="collapse10">
 								<h5>Tymon Frelik
@@ -66,7 +66,7 @@
 								<p>Coming soon</p>
 							</div>
 						</div>
-					</div> -->
+					</div>
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading9">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse9" aria-expanded="false" aria-controls="collapse9">
