--- a/gamma/index.html
+++ b/gamma/index.html
@@ -29,18 +29,28 @@
 		<div class="container mt-4">
 
 			<div class="row">
-				<div class="col-2">
+				<!-- <div class="col-7">
 					
-					<img src="./../img/Gamma.png" class="img-thumbnail border-0 mt-2" alt="xavi">
+					<img src="./../img/logo2.png" class="img-thumbnail border-0 mt-2" alt="gamma">
 
-				</div>
+				</div> -->
 
-				<div class="col-10">
+				<!-- <div class="col-5">
 					
 					<h1 class="h1 blue name">Seminar GAMMA:<br>Geometry and Applications. Modern Mathematical Approaches</h1>
 
-					<p>The <strong>Geometry and Applications: Modern Mathematical Approaches (Gamma) Seminar</strong> is a weekly online seminar aimed at discussing basic and advanced research topics conducted by the Polish-Spanish geometric group gathering people from the University of Warsaw, the International University of La Rioja, the Polytechnic University of Madrid, ICMAT, and the Polytechnic University of Catalonia.</p>
+					<p class='lead'>The <strong>Geometry and Applications: Modern Mathematical Approaches (Gamma) Seminar</strong> is a weekly online seminar aimed at discussing basic and advanced research topics conducted by the Polish-Spanish geometric group gathering people from the University of Warsaw, the International University of La Rioja, the Polytechnic University of Madrid, ICMAT, and the Polytechnic University of Catalonia.</p>
 					<p><strong>e-mail:</strong> gamma.seminar(at)gmail.com</p>
+				</div> -->
+
+				<div class="col-7">
+					<img src="./../img/logo2.png" class="img-thumbnail border-0 mt-2 mb-4" alt="gamma">
+				</div>
+
+
+				<div class="col-12">
+					<p class='lead'>The <strong>Geometry and Applications: Modern Mathematical Approaches (Gamma) Seminar</strong> is a weekly online seminar aimed at discussing basic and advanced research topics conducted by the Polish-Spanish geometric group gathering people from the University of Warsaw, the International University of La Rioja, the Polytechnic University of Madrid, ICMAT, and the Polytechnic University of Catalonia.</p>
+					<p class='lead'><strong>e-mail:</strong> gamma.seminar(at)gmail.com</p>
 				</div>
 			</div>
 
@@ -123,7 +133,7 @@
 						<div id="collapse6" class="accordion-collapse collapse" aria-labelledby="heading6" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>Field theories, like Maxwell's or Einsteins' equations, require a generalization of symplectic and cosymplectic geometry. In this session we will explore the geometry of field theories, showing the differences with respect to mechanics. We will define some of the most common geometric objects in field theories: the jet bundle and multisymplectic forms.</p>
+								<p>Field theories, like Maxwell's or Einstein's equations, require a generalization of symplectic and cosymplectic geometry. In this session we will explore the geometry of field theories, showing the differences with respect to mechanics. We will define some of the most common geometric objects in field theories: the jet bundle and multisymplectic forms.</p>
 							</div>
 						</div>
 					</div>
@@ -139,6 +149,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p>This talk, divided into two parts, is intended to be an introduction to mechanics on symplectic manifolds, both in the Hamiltonian and Lagrangian formalisms. We will start by reviewing some basic results on symplectic geometry and Hamiltonian systems, and introducing some concepts about symmetries of Hamiltonian systems and Noether's theorem. Then, we will see how to obtain a symplectic structure on the tangent bundle of the configuration space of a mechanical system from a Lagrangian function. In the second part of the talk we will cover two geometric formulations for time-dependent systems using cosymplectic and contact geometry. Throughout the talk, some examples will be used to illustrate the theory.</p>
+								<strong>Link to the video: </strong><a href='https://youtu.be/e-HGSB7rX04' target="_blank">Xavier Rivas --- Symplectic mechanics (part 2)</a>
 							</div>
 						</div>
 					</div>
@@ -212,8 +223,8 @@
 
 		</div>
 
-		<footer class="container-fluid footer mt-5 pb-1">
-			<p class="pt-3 text-center text-white"><small>Geometry and Applications. Modern Mathematical Approaches<br>gamma.seminar(at)gmail.com</small></p>
+		<footer class="container-fluid footer footer-gamma mt-5 pb-1">
+			<p class="lead pt-3 text-center text-white"><small>Geometry and Applications. Modern Mathematical Approaches<br>gamma.seminar(at)gmail.com</small></p>
 		</footer>
 
 		<!-- Option 1: Bootstrap Bundle with Popper -->
