--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 		<link rel="stylesheet" type="text/css" href="./css/style.css">
 
+		<link rel="icon" type="image/x-icon" href="img/x.png">
+
 		<title>Xavier Rivas</title>
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
