--- a/gamma/index.html
+++ b/gamma/index.html
@@ -112,13 +112,13 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7" aria-expanded="false" aria-controls="collapse7">
 								<h5>Asier López-Gordón
 								<br>
-								TBA &#8213; 11/05/2023, 21:00</h5>
+								An introduction to integrable systems &#8213; 11/05/2023, 21:00</h5>
 							</button>
 						</h3>
 						<div id="collapse7" class="accordion-collapse collapse" aria-labelledby="heading7" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>Coming soon</p>
+								<p>In this talk, I will discuss the concept of completely integrable system. The Liouville–Arnold theorem and the main ideas of its proof will be presented, along with several illustrative examples. Additionally, I will mention the relationship between action-angle coordinates and the Hamilton–Jacobi equation, as well as the Kolmogorov–Arnold–Moser theory.</p>
 							</div>
 						</div>
 					</div>
