--- a/gamma/index.html
+++ b/gamma/index.html
@@ -97,13 +97,13 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse8" aria-expanded="false" aria-controls="collapse8">
 								<h5>Daniel Pérez Palau
 								<br>
-								TBA &#8213; 18/05/2023, 21:00</h5>
+								The space: when three is a crowd &#8213; 18/05/2023, 21:00</h5>
 							</button>
 						</h3>
 						<div id="collapse8" class="accordion-collapse collapse" aria-labelledby="heading8" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>Coming soon</p>
+								<p>The circular restricted three body problem studies the movement of a free particle subject to the gravitational attraction of two massive bodies moving in circular orbits around their common center of mass. In this talk we will construct the model and analyze some dynamical properties like the existence of fixed points and their stability. Thanks to the dynamical comprehension of the problem, we will be able to explain why we can find Troyan asteroids as well as to justify the location of James Webb Telescope at approximately 1.5 million kilometers from the Earth. We will end the talk explaining how these simplified dynamics can help to save fuel in space travels.</p>
 							</div>
 						</div>
 					</div>
