--- a/gamma/index.html
+++ b/gamma/index.html
@@ -134,6 +134,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p>Field theories, like Maxwell's or Einstein's equations, require a generalization of symplectic and cosymplectic geometry. In this session we will explore the geometry of field theories, showing the differences with respect to mechanics. We will define some of the most common geometric objects in field theories: the jet bundle and multisymplectic forms.</p>
+								<strong>Link to the video: </strong><a href='https://youtu.be/YJNQgc4aAVs' target="_blank">Jordi Gaset --- The Geometry of field theories</a>
 							</div>
 						</div>
 					</div>
