--- a/gamma/index.html
+++ b/gamma/index.html
@@ -127,14 +127,14 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapse6">
 								<h5>Jordi Gaset
 								<br>
-								The Geometry of field theories &#8213; 04/05/2023, 21:00</h5>
+								The geometry of field theories &#8213; 04/05/2023, 21:00</h5>
 							</button>
 						</h3>
 						<div id="collapse6" class="accordion-collapse collapse" aria-labelledby="heading6" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p>Field theories, like Maxwell's or Einstein's equations, require a generalization of symplectic and cosymplectic geometry. In this session we will explore the geometry of field theories, showing the differences with respect to mechanics. We will define some of the most common geometric objects in field theories: the jet bundle and multisymplectic forms.</p>
-								<strong>Link to the video: </strong><a href='https://youtu.be/YJNQgc4aAVs' target="_blank">Jordi Gaset --- The Geometry of field theories</a>
+								<strong>Link to the video: </strong><a href='https://youtu.be/YJNQgc4aAVs' target="_blank">Jordi Gaset --- The geometry of field theories</a>
 							</div>
 						</div>
 					</div>
