--- a/gamma/index.html
+++ b/gamma/index.html
@@ -119,6 +119,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p>In this talk, I will discuss the concept of completely integrable system. The Liouville–Arnold theorem and the main ideas of its proof will be presented, along with several illustrative examples. Additionally, I will mention the relationship between action-angle coordinates and the Hamilton–Jacobi equation, as well as the Kolmogorov–Arnold–Moser theory.</p>
+								<strong>Link to the video: </strong><a href='https://youtu.be/y1-vfiHdF00' target="_blank">Asier López-Gordón --- An introduction to integrable systems</a>
 							</div>
 						</div>
 					</div>
