--- a/gamma/index.html
+++ b/gamma/index.html
@@ -82,13 +82,13 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse9" aria-expanded="false" aria-controls="collapse9">
 								<h5>Bartosz M. Zawora
 								<br>
-								TBA &#8213; 25/05/2023, 21:00</h5>
+								Basics on Lyapunov stability &#8213; 25/05/2023, 21:00</h5>
 							</button>
 						</h3>
 						<div id="collapse9" class="accordion-collapse collapse" aria-labelledby="heading9" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p>Coming soon</p>
+								<p>In this presentation, I will provide the fundamental overview of Lyapunov stability theory, which has broad applications in control theory and physics. I will begin by defining the equilibrium point of a non-autonomous system of ordinary differential equations and proceed to the classification of the stability of equilibrium points. Throughout my talk, I will show illustrative examples to demonstrate the different types of stability. In the end, I will introduce tools that enable the study of the behaviour of a system close to an equilibrium point without the need to solve, often highly complex, differential equations.</p>
 							</div>
 						</div>
 					</div>
