--- a/gamma/index.html
+++ b/gamma/index.html
@@ -104,6 +104,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p>The circular restricted three body problem studies the movement of a free particle subject to the gravitational attraction of two massive bodies moving in circular orbits around their common center of mass. In this talk we will construct the model and analyze some dynamical properties like the existence of fixed points and their stability. Thanks to the dynamical comprehension of the problem, we will be able to explain why we can find Troyan asteroids as well as to justify the location of James Webb Telescope at approximately 1.5 million kilometers from the Earth. We will end the talk explaining how these simplified dynamics can help to save fuel in space travels.</p>
+								<strong>Link to the video: </strong><a href='https://youtu.be/tJNFtdvH_iI' target="_blank">Daniel Pérez-Palau --- The space: when three is a crowd</a>
 							</div>
 						</div>
 					</div>
