--- a/gamma/index.html
+++ b/gamma/index.html
@@ -89,6 +89,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p>In this presentation, I will provide the fundamental overview of Lyapunov stability theory, which has broad applications in control theory and physics. I will begin by defining the equilibrium point of a non-autonomous system of ordinary differential equations and proceed to the classification of the stability of equilibrium points. Throughout my talk, I will show illustrative examples to demonstrate the different types of stability. In the end, I will introduce tools that enable the study of the behaviour of a system close to an equilibrium point without the need to solve, often highly complex, differential equations.</p>
+								<strong>Link to the video: </strong><a href='https://youtu.be/FQ3No3koByc' target="_blank">Bartosz M. Zawora --- Basics on Lyapunov stability</a>
 							</div>
 						</div>
 					</div>
