--- a/gamma/index.html
+++ b/gamma/index.html
@@ -63,6 +63,36 @@
 
 				<div class="accordion" id="accordionExample">
 					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading12">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse12" aria-expanded="false" aria-controls="collapse12">
+								<h5>Julia Lange
+								<br>
+								TBA &#8213; 15/06/2023, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse12" class="accordion-collapse collapse" aria-labelledby="heading12" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p>TBA</p>
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading11">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse11" aria-expanded="false" aria-controls="collapse11">
+								<h5>Javier de Lucas
+								<br>
+								TBA &#8213; 08/06/2023, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse11" class="accordion-collapse collapse" aria-labelledby="heading11" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p>TBA</p>
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading10">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse10" aria-expanded="false" aria-controls="collapse10">
 								<h5>Tymon Frelik
