--- a/gamma/index.html
+++ b/gamma/index.html
@@ -80,7 +80,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading11">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse11" aria-expanded="false" aria-controls="collapse11">
-								<h5>Javier de Lucas
+								<h5>Mikołaj Duch
 								<br>
 								TBA &#8213; 08/06/2023, 21:00</h5>
 							</button>
