--- a/gamma/index.html
+++ b/gamma/index.html
@@ -28,6 +28,13 @@
 
 		<div class="container mt-4">
 
+			<!-- <div class="row">
+				<nav class="nav justify-content-end h4">
+					<a class="nav-link active" aria-current="page" href="https://xavirivas.com/gamma/">Gamma</a>
+					<a class="nav-link" href="https://xavirivas.com/gamma/participants/">Participants</a>
+				</nav>
+			</div> -->
+
 			<div class="row">
 				<!-- <div class="col-7">
 					
@@ -54,14 +61,57 @@
 				</div>
 			</div>
 
-			<hr class="hr-blue my-4">
+			<hr class="hr-blue mt-1 mb-4">
 
+
+			<div class="row">				
+
+				<!-- <h3 class="blue">&#9632; Members</h3> -->
+				<h5>Organizing committee:</h5>
+				<ul class="ms-4">
+					<li><a href="https://www.fuw.edu.pl/~delucas/" target="_blank">Javier de Lucas</a></li>
+					<li><a href="https://xavirivas.com/" target="_blank">Xavier Rivas</a></li>
+				</ul>
+				<h5>Participants:</h5>
+				<ul class="ms-4">
+					<li>Mikołaj Duch</li>
+					<li>Tymon Frelik</li>
+					<li>Jordi Gaset Rifà</li>
+					<li>Jacek Wojciech Hann</li>
+					<li>Julia Lange</li>
+					<li>Asier López Gordón</li>
+					<li>Adam Maskalaniec</li>
+					<li>Maksym Matviienko</li>
+					<li>Silvia Souto</li>
+					<li>Daniel Torres</li>
+					<li>Krzysztof Jan Wolicki</li>
+					<li>Bartosz Zawora</li>
+				</ul>
+
+			</div>
+
+			<hr class="hr-blue mt-1 mb-4">
 
 			<div class="row">				
 
 				<h3 class="blue">&#9632; Conferences</h3>
 
 				<div class="accordion" id="accordionExample">
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading13">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse13" aria-expanded="false" aria-controls="collapse13">
+								<h5>Javier de Lucas
+								<br>
+								TBA &#8213; 22/06/2023, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse13" class="accordion-collapse collapse" aria-labelledby="heading13" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p>TBA</p>
+							</div>
+						</div>
+					</div>
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading12">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse12" aria-expanded="false" aria-controls="collapse12">
