--- a/gamma/index.html
+++ b/gamma/index.html
@@ -69,7 +69,7 @@
 				<!-- <h3 class="blue">&#9632; Members</h3> -->
 				<h5>Organizing committee:</h5>
 				<ul class="ms-4">
-					<li><a href="https://www.fuw.edu.pl/~delucas/" target="_blank">Javier de Lucas</a></li>
+					<li><a href="https://delucasaraujo.wixsite.com/uniwersytet" target="_blank">Javier de Lucas</a></li>
 					<li><a href="https://xavirivas.com/" target="_blank">Xavier Rivas</a></li>
 				</ul>
 				<h5>Participants:</h5>
