--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 				<p>Some of the colleagues I have collaborated with are:</p>
 				<ul class="ms-4">
 					<li><a href="https://www.icmat.es/mdeleon" target="_blank">Manuel de León</a></li>
-					<li><a href="https://www.fuw.edu.pl/~delucas/" target="_blank">Javier de Lucas</a></li>
+					<li><a href="https://delucasaraujo.wixsite.com/uniwersytet" target="_blank">Javier de Lucas</a></li>
 					<li><a href="https://www.unir.net/profesores/jordi-gaset-rifa/" target="_blank">Jordi Gaset</a></li>
 					<li><a href="https://web.mat.upc.edu/xavier.gracia/" target="_blank">Xavier Gràcia</a></li>
 					<li><a href="http://mlainz.gitlab.io/" target="_blank">Manuel Lainz</a></li>
