--- a/gamma/index.html
+++ b/gamma/index.html
@@ -69,23 +69,23 @@
 				<!-- <h3 class="blue">&#9632; Members</h3> -->
 				<h5>Organizing committee:</h5>
 				<ul class="ms-4">
-					<li><a href="https://delucasaraujo.wixsite.com/uniwersytet" target="_blank">Javier de Lucas</a></li>
-					<li><a href="https://xavirivas.com/" target="_blank">Xavier Rivas</a></li>
+					<li><a href="https://delucasaraujo.wixsite.com/uniwersytet" target="_blank">Javier de Lucas</a> (University of Warsaw)</li>
+					<li><a href="https://xavirivas.com/" target="_blank">Xavier Rivas</a> (International University of La Rioja)</li>
 				</ul>
 				<h5>Participants:</h5>
 				<ul class="ms-4">
-					<li>Mikołaj Duch</li>
-					<li>Tymon Frelik</li>
-					<li>Jordi Gaset Rifà</li>
-					<li>Jacek Wojciech Hann</li>
-					<li>Julia Lange</li>
-					<li>Asier López Gordón</li>
-					<li>Adam Maskalaniec</li>
-					<li>Maksym Matviienko</li>
-					<li>Silvia Souto</li>
-					<li>Daniel Torres</li>
-					<li>Krzysztof Jan Wolicki</li>
-					<li>Bartosz Zawora</li>
+					<li>Mikołaj Duch (University of Warsaw)</li>
+					<li>Tymon Frelik (University of Warsaw)</li>
+					<li>Jordi Gaset Rifà (Polytechnic University of Madrid)</li>
+					<li>Jacek Wojciech Hann (University of Warsaw)</li>
+					<li>Julia Lange (University of Warsaw)</li>
+					<li>Asier López Gordón (Instituto de Ciencias Matemáticas)</li>
+					<li>Adam Maskalaniec (University of Warsaw)</li>
+					<li>Maksym Matviienko (University of Warsaw)</li>
+					<li>Silvia Souto (University of Santiago de Compostela)</li>
+					<li>Daniel Torres (Polytechnic University of Catalonia)</li>
+					<li>Krzysztof Jan Wolicki (University of Warsaw)</li>
+					<li>Bartosz Zawora (University of Warsaw)</li>
 				</ul>
 
 			</div>
